Make sure to reframe when the "rules" attribute changes, since tables cache all sorts of border-collapse stuff across reflows.  Bug 226593, r=bernd, sr=dbaron, a=brendan